labs/lab7/k8s/bad-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: bad-app }
spec:
  template:
    spec:
      containers:
        - name: app
          image: nginx
