labs/lab7/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
    - name: http
      port: 3000
      targetPort: http
